2005-02-10 Magnus Hagdorn
 * glimmer_log: improved logging by allowing various severety levels (merged in Ian's implementation)
 * hooked up logging (Makefile, bin2ncdf.f90, glide_pdd.f90, glide_setup.f90, glimmer_CFproj.f90, glimmer_config.f90,
	glimmer_ncdf.f90, glimmer_ncparms.f90, glimmer_ts.f90, glimmer_utils.f90, gmt.f90, input2ncdf.f90, simple_forcing.f90,
	generate_ncvars.py)
 * removed obsolete netCDF stuff and isostasy code

2005-02-09 Magnus Hagdorn
 * merged in new stuff part 1

2005-02-08 Magnus Hagdorn
 * fixed Makefile to include flow router

2005-02-08 Ian Rutt
 * Removed NAG-non-compliant section and value name checking from glimmer_setup.f90

2005-01-31 Ian Rutt
 * Reverted last change, since it was based on a misunderstanding. _No_ fields are spliced
   into the input - the splicing takes place as the output fields are prepared from the outputs
   of the individual instances.

2005-01-26 Ian Rutt
 * Changed water flux fields so they replace the input rather than being spliced into it

2005-01-18 Ian Rutt
 * Plumbed in flow-routing code (and corrected a bug)

2005-01-17 Ian Rutt
 * Added flow-routing code for run-off calculation. Not connected yet. Removed 
   old (unused) routing code.

2005-01-12 Ian Rutt
 * Restored .in files and generate_ncvars.py, but not as part of build
   structure, to enable system to still be used for development, but not as
   part of build
 * Adjusted Makefiles to reflect machine-independence in GENIE build (i.e. added 
   $(OBJ_EXT), etc)

2005-01-11 Ian Rutt
 * Completed first stage changes to Glimmer structure for the new mass-balance model. 
 * Also minor formatting/organisational changes.
 * Removed auto-generation of NetCDF handling code - using latest build, but hardwired
 * Made formatting changes to NetCDF routines
 * Updated build routine to take account of NetCDF changes

2005-01-07 Ian Rutt
 * Made substantial changes to structure to enable to begin process of allowing the 